# rustbn-wasm

./: .babelrc  .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: javascript.yml
pkg/: package.json  rustbn.js  rustbn_bg.js  rustbn_bg.wasm
scripts/: ts-build.sh  wasmToB64.js
src/: lib.rs
src.ts/: rustbn.ts  wasm.json  wasm.ts
test/: index.spec.ts
wasm/: rustbn_bg.wasm
