# You must change these to your own details.
[package]
name = "rustbn.wasm"
description = "javascript bindings for https://github.com/paritytech/bn (using wasm)"
version = "0.1.0"
authors = ["acolytec3"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true


[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", version = "0.1.1" }
rustc-hex = "1.0"
